[gd_scene load_steps=30 format=3 uid="uid://wo631fluqa0p"]

[ext_resource type="Script" uid="uid://c7pjmf60m2ova" path="res://world/gd/LevelA.gd" id="1_xcgu7"]
[ext_resource type="PhysicsMaterial" uid="uid://dq1r6votcqh1x" path="res://materials/physics/FloorPhysics.tres" id="2_mqshf"]
[ext_resource type="Material" uid="uid://kotd4yt27t51" path="res://materials/FloorMaterial.tres" id="3_8kvw6"]
[ext_resource type="Script" uid="uid://7c1aiis7pati" path="res://world/gd/SlotRing.gd" id="4_gb8u2"]
[ext_resource type="Shader" uid="uid://dscrnc7k3wda7" path="res://materials/shader/WaveRingMaterial.gdshader" id="5_m2t4w"]
[ext_resource type="Material" uid="uid://deqkf3j301h5d" path="res://materials/DotCirclesMaterial.tres" id="6_2x4dr"]
[ext_resource type="Shader" uid="uid://colhoamqrtuej" path="res://materials/shader/DotCirclesMaterial.gdshader" id="7_bm8vg"]
[ext_resource type="PackedScene" uid="uid://cssayoomcrb8o" path="res://world/Spawner.tscn" id="8_cfpsr"]
[ext_resource type="PackedScene" uid="uid://cqn35mciqmm8s" path="res://world/Enemy.tscn" id="9_jq0qu"]
[ext_resource type="PackedScene" uid="uid://b0ky2r6dv835o" path="res://world/Base.tscn" id="10_rvwlb"]
[ext_resource type="PackedScene" uid="uid://dt4vauql4gx0y" path="res://components/HalfCapsule.tscn" id="11_36jqx"]
[ext_resource type="PackedScene" uid="uid://b8phu2uow5j4d" path="res://world/Clock.tscn" id="12_7djrp"]
[ext_resource type="Script" uid="uid://c5hsf15hvj6m" path="res://world/Bounds.gd" id="13_1kcnp"]
[ext_resource type="PackedScene" uid="uid://c2avn203eitto" path="res://world/MultiMesh.tscn" id="14_3vxsb"]

[sub_resource type="PlaneMesh" id="PlaneMesh_dn5x0"]
size = Vector2(1000, 1000)

[sub_resource type="BoxShape3D" id="BoxShape3D_dn5x0"]
size = Vector3(1000, 1, 1000)

[sub_resource type="PlaneMesh" id="PlaneMesh_052yy"]
size = Vector2(1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vkdmv"]
render_priority = -2
shader = ExtResource("5_m2t4w")
shader_parameter/wave_count = 8.0
shader_parameter/ring_color = Color(0.07, 0.07, 0.07, 1)
shader_parameter/ring_radius = 0.3330000158175
shader_parameter/ring_width = 0.166000007885
shader_parameter/inner_strength = 0.01600000076
shader_parameter/outer_strength = 0.032
shader_parameter/depth_bias = 2.0
shader_parameter/phase_degrees = 90.0
shader_parameter/wave_degrees = 180.0

[sub_resource type="PlaneMesh" id="PlaneMesh_f0k3j"]

[sub_resource type="PlaneMesh" id="PlaneMesh_5sqgi"]
size = Vector2(2.5, 2.5)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_052yy"]
render_priority = -2
shader = ExtResource("5_m2t4w")
shader_parameter/wave_count = 24.0
shader_parameter/ring_color = Color(0.07, 0.07, 0.07, 1)
shader_parameter/ring_radius = 0.4030000191425
shader_parameter/ring_width = 0.0650000030875
shader_parameter/inner_strength = 0.0070000003325
shader_parameter/outer_strength = 0.010000000475
shader_parameter/depth_bias = 2.0
shader_parameter/phase_degrees = 0.0
shader_parameter/wave_degrees = 180.0

[sub_resource type="PlaneMesh" id="PlaneMesh_jnau8"]
size = Vector2(3, 3)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_awxuj"]
render_priority = -1
shader = ExtResource("7_bm8vg")
shader_parameter/dot_color = Color(0.06, 0.06, 0.06, 0.9882353)
shader_parameter/circleCount = 32.0
shader_parameter/ringRadius = 0.9010000427975
shader_parameter/circleRadius = 0.0670000031825
shader_parameter/depth_bias = 4.0
shader_parameter/phase_degrees = 0.0
shader_parameter/wave_degrees = 180.0

[sub_resource type="PlaneMesh" id="PlaneMesh_vkdmv"]
size = Vector2(4, 4)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jnau8"]
render_priority = -2
shader = ExtResource("5_m2t4w")
shader_parameter/wave_count = 32.0
shader_parameter/ring_color = Color(0.07, 0.07, 0.07, 1)
shader_parameter/ring_radius = 0.4210000199975
shader_parameter/ring_width = 0.0400000019
shader_parameter/inner_strength = 0.0050000002375
shader_parameter/outer_strength = 0.0070000003325
shader_parameter/depth_bias = 2.0
shader_parameter/phase_degrees = 0.0
shader_parameter/wave_degrees = 180.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sypgb"]
albedo_color = Color(1, 0, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dn5x0"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_d6u53"]
albedo_color = Color(0, 0, 1, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_052yy"]
radius = 49.0

[node name="LevelA" type="Node3D"]
process_mode = 1
script = ExtResource("1_xcgu7")

[node name="Floor" type="StaticBody3D" parent="."]
collision_layer = 2147483648
collision_mask = 59
physics_material_override = ExtResource("2_mqshf")

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
layers = 3
cast_shadow = 0
mesh = SubResource("PlaneMesh_dn5x0")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("3_8kvw6")
metadata/_edit_lock_ = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_dn5x0")
metadata/_edit_lock_ = true

[node name="SlotsRings" type="Node3D" parent="Floor"]
metadata/_edit_lock_ = true

[node name="SlotRing1" type="Node3D" parent="Floor/SlotsRings"]
unique_name_in_owner = true
script = ExtResource("4_gb8u2")
radius = 5.5
metadata/_custom_type_script = "uid://7c1aiis7pati"
metadata/_edit_lock_ = true

[node name="SlotRing2" type="Node3D" parent="Floor/SlotsRings"]
unique_name_in_owner = true
visible = false
script = ExtResource("4_gb8u2")
numSlots = 16
radius = 10.2
metadata/_custom_type_script = "uid://7c1aiis7pati"
metadata/_edit_lock_ = true

[node name="SlotRing3" type="Node3D" parent="Floor/SlotsRings"]
unique_name_in_owner = true
visible = false
script = ExtResource("4_gb8u2")
numSlots = 24
radius = 15.0
metadata/_custom_type_script = "uid://7c1aiis7pati"
metadata/_edit_lock_ = true

[node name="SlotRing4" type="Node3D" parent="Floor/SlotsRings"]
unique_name_in_owner = true
visible = false
script = ExtResource("4_gb8u2")
numSlots = 32
radius = 20.0
metadata/_custom_type_script = "uid://7c1aiis7pati"
metadata/_edit_lock_ = true

[node name="SlotRing5" type="Node3D" parent="Floor/SlotsRings"]
unique_name_in_owner = true
visible = false
script = ExtResource("4_gb8u2")
numSlots = 40
radius = 25.0
metadata/_custom_type_script = "uid://7c1aiis7pati"
metadata/_edit_lock_ = true

[node name="SlotRing6" type="Node3D" parent="Floor/SlotsRings"]
unique_name_in_owner = true
visible = false
script = ExtResource("4_gb8u2")
numSlots = 48
radius = 30.0
metadata/_custom_type_script = "uid://7c1aiis7pati"
metadata/_edit_lock_ = true

[node name="Waves" type="Node3D" parent="Floor"]
transform = Transform3D(14.8, 0, 0, 0, 14.8, 0, 0, 0, 14.8, 0, 0, 0)
visible = false
metadata/_edit_lock_ = true

[node name="RingWave1" type="MeshInstance3D" parent="Floor/Waves"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0030175415)
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_052yy")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_vkdmv")
metadata/_edit_lock_ = true

[node name="RingDots1" type="MeshInstance3D" parent="Floor/Waves"]
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_f0k3j")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_2x4dr")
metadata/_edit_lock_ = true

[node name="RingWave2" type="MeshInstance3D" parent="Floor/Waves"]
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_5sqgi")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_052yy")
metadata/_edit_lock_ = true

[node name="RingDots2" type="MeshInstance3D" parent="Floor/Waves"]
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_jnau8")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_awxuj")
metadata/_edit_lock_ = true

[node name="RingWave3" type="MeshInstance3D" parent="Floor/Waves"]
transform = Transform3D(0.99999994, 0, 0, 0, 0.99999994, 0, 0, 0, 0.99999994, 0.003017477, 0, 0)
visible = false
cast_shadow = 0
mesh = SubResource("PlaneMesh_vkdmv")
skeleton = NodePath("../..")
surface_material_override/0 = SubResource("ShaderMaterial_jnau8")
metadata/_edit_lock_ = true

[node name="Spawners" type="Node3D" parent="."]

[node name="Node3D1" type="Node3D" parent="Spawners"]
transform = Transform3D(0.99999994, 0, 0, 0, 1, 0, 0, 0, 0.99999994, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D1" instance=ExtResource("8_cfpsr")]
transform = Transform3D(1.2665987e-07, 0, -1, 0, 1, 0, 1, 0, 1.2665987e-07, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")

[node name="Node3D2" type="Node3D" parent="Spawners"]
transform = Transform3D(0.7071067, 0, 0.7071067, 0, 1, 0, -0.7071067, 0, 0.7071067, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D2" instance=ExtResource("8_cfpsr")]
transform = Transform3D(1.3113416e-07, 0, -1, 0, 1, 0, 1, 0, 1.3113416e-07, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")
activation_level = 700

[node name="Node3D3" type="Node3D" parent="Spawners"]
transform = Transform3D(0.7071067, 0, -0.7071067, 0, 1, 0, 0.7071067, 0, 0.7071067, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D3" instance=ExtResource("8_cfpsr")]
transform = Transform3D(1.3113416e-07, 0, -1, 0, 1, 0, 1, 0, 1.3113416e-07, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")
activation_level = 100

[node name="Node3D4" type="Node3D" parent="Spawners"]
transform = Transform3D(-4.3711385e-08, 0, -0.9999999, 0, 1, 0, 0.9999999, 0, -4.3711385e-08, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D4" instance=ExtResource("8_cfpsr")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")
activation_level = 200

[node name="Node3D5" type="Node3D" parent="Spawners"]
transform = Transform3D(-4.3711385e-08, 0, 0.9999999, 0, 1, 0, -0.9999999, 0, -4.3711385e-08, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D5" instance=ExtResource("8_cfpsr")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")
activation_level = 600

[node name="Node3D6" type="Node3D" parent="Spawners"]
transform = Transform3D(-0.7071067, 0, 0.7071067, 0, 1, 0, -0.7071067, 0, -0.7071067, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D6" instance=ExtResource("8_cfpsr")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")
activation_level = 500

[node name="Node3D7" type="Node3D" parent="Spawners"]
transform = Transform3D(-0.7071067, 0, -0.7071067, 0, 1, 0, 0.7071067, 0, -0.7071067, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D7" instance=ExtResource("8_cfpsr")]
transform = Transform3D(-8.940697e-08, 0, -1, 0, 1, 0, 1, 0, -8.940697e-08, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")
activation_level = 300

[node name="Node3D8" type="Node3D" parent="Spawners"]
transform = Transform3D(-0.9999999, 0, -8.742277e-08, 0, 1, 0, 8.742277e-08, 0, -0.9999999, 0, 0, 0)

[node name="Spawner" parent="Spawners/Node3D8" instance=ExtResource("8_cfpsr")]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, 0, 0, -40)
spawnee = ExtResource("9_jq0qu")
activation_level = 400

[node name="Enemies" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Bullets" type="Node3D" parent="."]
unique_name_in_owner = true

[node name="Base" parent="." instance=ExtResource("10_rvwlb")]
unique_name_in_owner = true

[node name="Axis" type="Node3D" parent="."]
visible = false

[node name="Axis X" parent="Axis" instance=ExtResource("11_36jqx")]
transform = Transform3D(-4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0, 0, 1, 0, 0, 0)
radius = 0.1
segments = 12
rings = 8
material = SubResource("StandardMaterial3D_sypgb")

[node name="Axis Y" parent="Axis" instance=ExtResource("11_36jqx")]
radius = 0.1
segments = 12
rings = 8
material = SubResource("StandardMaterial3D_dn5x0")

[node name="Axis Z" parent="Axis" instance=ExtResource("11_36jqx")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, 0)
radius = 0.1
segments = 12
rings = 8
material = SubResource("StandardMaterial3D_d6u53")

[node name="Clock" parent="." instance=ExtResource("12_7djrp")]
unique_name_in_owner = true
process_mode = 1
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.1, 0)

[node name="Bounds" type="Area3D" parent="."]
collision_layer = 536870912
collision_mask = 48
monitorable = false
script = ExtResource("13_1kcnp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Bounds"]
shape = SubResource("SphereShape3D_052yy")

[node name="MultiMesh" parent="." instance=ExtResource("14_3vxsb")]

[connection signal="visibility_changed" from="Floor/SlotsRings/SlotRing1" to="Floor/SlotsRings/SlotRing1" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Floor/SlotsRings/SlotRing2" to="Floor/SlotsRings/SlotRing2" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Floor/SlotsRings/SlotRing3" to="Floor/SlotsRings/SlotRing3" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Floor/SlotsRings/SlotRing4" to="Floor/SlotsRings/SlotRing4" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Floor/SlotsRings/SlotRing5" to="Floor/SlotsRings/SlotRing5" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="Floor/SlotsRings/SlotRing6" to="Floor/SlotsRings/SlotRing6" method="_on_visibility_changed"]
[connection signal="body_exited" from="Bounds" to="Bounds" method="bodyExit"]
